assets/styles/scss/_custom.scss
.logo-wrapper {
	position: relative;
	display: inline-block;
	vertical-align: middle;
	height: 80px;
	z-index: 1;
}
.logo-img {
	padding-top: 0px;
	width: 35%;
	transition: 0.4s ease-in-out;
	@include breakpoint (sm) {
		padding-top: 50px;
		margin-left: -200px;
		width: 200px;
	}
	@include breakpoint (md) {
		padding-top: 87px;
		margin-left: 5px;
		width: 355px;
	}
	@include breakpoint (lg) {
		padding-top: 67px;
		margin-left: 8.5px;
		width: 480px;
	}
}
.kill-padding {
	padding-left: 0px;
	padding-right: 0px;
}
.home-header {
	width: 100%;
	min-height: 500px;
	background: #222;
}
.commercial {
	position: relative;
	padding-top: 150px;
	background: #222;
	background-image: url('../../../../uploads/2020/07/splash-commercial.jpg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position:top center;
	min-height: 500px;
	transition: 0.3s ease-in-out;
	z-index: 0;
	//&:hover {
	//	opacity: 0.7;
	//	transition: 0.3s ease-in-out;
//	}
}
.homeowner {
	position: relative;
	padding-top: 150px;
	background: #222;
	background-image: url('../../../../uploads/2020/07/splash-homeowner.jpg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position:top center;
	min-height: 500px;
	transition: 0.3s ease-in-out;
	//&:hover {
	//	opacity: 0.7;
	//	transition: 0.3s ease-in-out;
//	}
}
.main-heading {
	position: relative;
	font-size: 3rem;
	color: #fff;
	transition: 0.3s ease-in-out;
	&:hover {
		text-decoration: none;
		color: #11aeff;
		transition: 0.3s ease-in-out;
	}
}
.hamburger {
	position: relative;
	@include breakpoint (xs) {
		margin-top: -70px;
	}
	@include breakpoint (sm) {
		margin-top: 45px;
	}
}
.title-wrapper {
	padding-top: 5rem;
	padding-bottom: 5rem;
	background: #3a3435;
	clear: both;
	position: relative;
	overflow: hidden;
	height: 289px;

  	&:before {
  		content: "";
  		background: rgba(17, 174, 255, 0.2);
  		position: absolute;
  		top: 0;
  		right: 0;
  		bottom: 0;
  		left: 0;
  		z-index: 0;
  	}
}
.blog-header {
	position: relative;
	display: block;
	
	&:after {
		content: '';
		height: 3px;
		background: #11aeff;
		display: block;
		width: 45%;
		margin: auto;
		margin-top: 15px;
	}
}
.blog-sign-up {
	width: 100%;
	background: #11aeff;
	min-height: 400px;
}
.affiliates {
	width: 100%;
	min-height: 380px;
	background: #fff;
}
.footer {
	min-height: 780px;
	width: 100%;
	background: #000;
}
.statement {
	position: fixed;
	width: 100%;
	min-height: 45px;
	padding-top: 10px;
	background-color: #EBB232;
	z-index: 10;
	padding-left: 15px;
	padding-right: 15px;
}
.essential {
	color: #ff0000;
}
.phone-numbers {
	position: relative;
	font-weight: bold;
	text-transform: uppercase;
	color: #af2525;
	font-size: 14px;
	margin-top: 0px;
	text-align: center;
}
.foot-heading {
	color: #11aeff;
	text-transform: uppercase;
	font-size: 1.5rem;
	padding-top: 10px;
}
.newsletter-sign-up {
	border-bottom: 1px solid #ccc;
	padding-bottom: 1.8rem;
}
.mission {
	min-height: 420px;
	background: #f4f4f4;
	width: 100%;
}
.main-header-home {
	position: relative;
	display: block;
	
	&:after {
		content: '';
		height: 3px;
		background: #11aeff;
		display: block;
		width: 50%;
		margin: auto;
		margin-top: 25px;
	}
}
.main-header-hero {
	position: relative;
	display: block;
	
	&:after {
		content: '';
		height: 3px;
		background: #11aeff;
		display: block;
		width: 200px;
		margin: auto;
		margin-top: 25px;
		margin-bottom: 2rem;
	}
}
.main-header-left {
	position: relative;
	display: block;
	
	&:after {
		content: '';
		height: 3px;
		background: #11aeff;
		display: block;
		width: 200px;
		margin-top: 25px;
		margin-bottom: 2rem;
	}
}
#scroll {
  position: fixed;
  right: 10px;
  bottom: 10px;
  cursor: pointer;
  width: 50px;
  height: 50px;
  background-color: #11aeff;
  text-indent: -9999px;
  display: none;
  -webkit-border-radius: 60px;
  -moz-border-radius: 60px;
  border-radius: 60px;
  transition: 0.2s ease-in-out;

  span {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: -8px;
    margin-top: -12px;
    height: 0;
    width: 0;
    border: 8px solid transparent;
    border-bottom-color: #ffffff;
  }

  &:hover {
    background-color: #e74c3c;
    transition: 0.2s ease-in-out;
    opacity: 1;
    filter: "alpha(opacity=100)";
    -ms-filter: "alpha(opacity=100)";
  }
}
.who-we-are {
	width: 100%;
	display: block;
}
.plumber-img {
	min-height: 700px;
	display: block;
	width: 100%;
	background-image: url('../../../../uploads/2020/07/pipe_and_wrench_blue_overlay.jpeg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position:top center;
}
.trophy-img {
	min-height: 700px;
	display: block;
	width: 100%;
	background-image: url('../../../../uploads/2020/07/trophy_blue_overlay.jpeg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position:top center;
}
.wwa-text {
	display: block;
	padding: 15px;
	@include breakpoint (md) {
		padding: 100px;
	}
}
.geo-map {
	min-height: 315px;
	width: 100%;
	background-image: url('../../../../uploads/2020/07/Untitled-1.png');
	background-repeat: no-repeat;
	background-size: cover;
	background-position:top center;
}

